--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,15 @@
+@import '../../theme/variables.scss';
 page-home {
-
+	.addBtn {
+		position: fixed;
+		bottom: 20px;
+		right: 20px;
+		width: 80px;
+		height: 80px;
+		border-radius: 50%;
+		background-color: map-get($colors, 'primary');
+		font-size: 60px;
+		color: white;
+		font-weight: bold;
+	};
 }
