--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,7 +7,7 @@ page-home {
 		width: 80px;
 		height: 80px;
 		border-radius: 50%;
-		background-color: map-get($colors, 'primary');
+		background-color: map-get($colors, 'ora');
 		font-size: 60px;
 		color: white;
 		font-weight: bold;
